--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,18 +2,32 @@
     <string name="app_name">VKPeople</string>
     <integer name="com_vk_sdk_AppId">7784727</integer>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="content_description_user">User</string>
 
-    <string name="menu_item_login">Login</string>
-    <string name="menu_item_logout">Logout</string>
-    <string name="menu_item_service_random_users">Random Users</string>
+    <string name="menu_item_login">Войти</string>
+    <string name="menu_item_logout">Выйти</string>
+    <string name="menu_item_service_random_users">Пользователи</string>
+    <string name="menu_item_service_saved_users">Сохранения</string>
 
-    <string name="online">Online</string>
-    <string name="last_seen_male">был в сети</string>
-    <string name="last_seen_female">была в сети</string>
-    <string name="last_seen_other">последнее посещение</string>
+    <string name="message_custom_id_title">Введите ID пользователя:</string>
+
+    <string name="message_user_save_success">Пользователь успешно сохранен!</string>
+    <string name="message_user_save_success_action">Отмена</string>
+    <string name="message_user_save_fail">Не удалось сохранить пользователя!</string>
+    <string name="message_user_save_fail_action">Повторить</string>
+    <string name="message_user_delete_success">Пользователь успешно удален!</string>
+    <string name="message_user_delete_success_action">Отмена</string>
+    <string name="message_user_delete_fail">Не удалось удалить пользователя!</string>
+    <string name="message_user_delete_fail_action">Повторить</string>
+    <string name="message_users_saved_empty">Нет сохраненных пользователей</string>
+
+    <string name="action_user_next">Next</string>
+    <string name="action_user_open">Open</string>
+    <string name="action_user_delete">Delete</string>
+
+    <string name="user_online">Online</string>
+    <string name="user_last_seen_male">был в сети</string>
+    <string name="user_last_seen_female">была в сети</string>
+    <string name="user_last_seen_other">последнее посещение</string>
 
 </resources>
